# Aircraft_carrier_tower

./: AI工作日记.md  README.md  pyproject.toml  receive_log.txt  详细操作流程.md
.clinerules/: terminal_GUI.py  航空母舰塔楼.md
Aircraft_carrier_tower-main/: ENHANCED_FEATURES.md  README.md  demo_enhanced_features.py  demo_enhanced_gui.py  pyproject.toml  test_enhanced_features.py  test_gui.py  增强功能实现总结.md
Aircraft_carrier_tower-main/.clinerules/: 航空母舰塔楼.md
Aircraft_carrier_tower-main/src/: GUI.py  GUI_enhanced.py  command.py  initial.py  main.py  playerInput.py  protocol.py  serial_thread.py
src/: GUI.py  UART_receive.py  UART_send.py  consle.py  initial.py  main.py  playerInput.py  protocol.py  terminal_GUI.py
